# roboligo

./: .gitignore  Battery_8cpp.html  Battery_8cpp__incl.map  Battery_8cpp__incl.md5  Battery_8hpp.html  Battery_8hpp__dep__incl.map  Battery_8hpp__dep__incl.md5  Battery_8hpp__incl.map  Battery_8hpp__incl.md5  Battery_8hpp_source.html  ClassificationBase_8cpp.html  ClassificationBase_8cpp__incl.map  ClassificationBase_8cpp__incl.md5  ClassificationBase_8hpp.html  ClassificationBase_8hpp__dep__incl.map  ClassificationBase_8hpp__dep__incl.md5  ClassificationBase_8hpp__incl.map  ClassificationBase_8hpp__incl.md5  ClassificationBase_8hpp_source.html  Commander_8cpp.html  Commander_8cpp__incl.map  Commander_8cpp__incl.md5  Commander_8hpp.html  Commander_8hpp__dep__incl.map  Commander_8hpp__dep__incl.md5  Commander_8hpp__incl.map  Commander_8hpp__incl.md5  Commander_8hpp_source.html  ConnectorBase_8cpp.html  ConnectorBase_8cpp__incl.map  ConnectorBase_8cpp__incl.md5  ConnectorBase_8hpp.html  ConnectorBase_8hpp__dep__incl.map  ConnectorBase_8hpp__dep__incl.md5  ConnectorBase_8hpp__incl.map  ConnectorBase_8hpp__incl.md5  ConnectorBase_8hpp_source.html  ConnectorNode_8cpp.html  ConnectorNode_8cpp__incl.map  ConnectorNode_8cpp__incl.md5  (+541 more)
.github/: Doxyfile  Doxygen
.github/workflows/: doxygen.yml  jazzy.yml  main.yml  rolling.yml
roboligo/: CMakeLists.txt  package.xml
roboligo/launch/: roboligo.launch.py
roboligo/params/: drone.params.yaml
roboligo_cli/: package.xml  setup.py
roboligo_cli/roboligo_cli/command/: roboligo.py
roboligo_cli/roboligo_cli/verb/: arming.py  disarming.py  landing.py  offboard.py  standby.py  takeoff.py
roboligo_common/: CMakeLists.txt  package.xml
roboligo_common/include/roboligo_common/classification/: ClassificationBase.hpp  Mode.hpp  Trigger.hpp
roboligo_common/include/roboligo_common/connector/: Commander.hpp  ConnectorBase.hpp  Sensor.hpp
roboligo_common/include/roboligo_common/connector/commanders/: Input.hpp  Output.hpp  Service.hpp
roboligo_common/include/roboligo_common/connector/sensors/: Battery.hpp  Imu.hpp  NavSat.hpp  Odom.hpp
roboligo_common/include/roboligo_common/types/: Interface.hpp  Linker.hpp  PluginBase.hpp  RobotState.hpp
roboligo_common/src/roboligo_common/classification/: ClassificationBase.cpp  Mode.cpp  Trigger.cpp
roboligo_common/src/roboligo_common/connector/: Commander.cpp  ConnectorBase.cpp  Sensor.cpp
roboligo_common/src/roboligo_common/connector/commanders/: Input.cpp  Output.cpp  Service.cpp
roboligo_common/src/roboligo_common/connector/sensors/: Battery.cpp  Imu.cpp  NavSat.cpp  Odom.cpp
roboligo_common/src/roboligo_common/types/: Interface.cpp  Linker.cpp  PluginBase.cpp  RobotState.cpp
roboligo_connector/: CMakeLists.txt  package.xml
roboligo_connector/include/roboligo_connector/: ConnectorNode.hpp
roboligo_connector/src/roboligo_connector/: ConnectorNode.cpp
roboligo_interfaces/: CMakeLists.txt  package.xml
roboligo_interfaces/srv/: RoboligoString.srv
roboligo_plugins/roboligo_connector_mavros/: CMakeLists.txt  package.xml  roboligo_connector_mavros_plugins.xml
roboligo_plugins/roboligo_connector_mavros/include/roboligo_connector_mavros/: RoboligoConnectorMavros.hpp
roboligo_plugins/roboligo_connector_mavros/src/roboligo_connector_mavros/: RoboligoConnectorMavros.cpp
roboligo_plugins/roboligo_robot_drone/: CMakeLists.txt  package.xml  roboligo_robot_drone_plugins.xml
roboligo_plugins/roboligo_robot_drone/include/roboligo_robot_drone/: RoboligoRobotDrone.hpp
roboligo_plugins/roboligo_robot_drone/src/roboligo_robot_drone/: RoboligoRobotDrone.cpp
roboligo_states/: CMakeLists.txt  package.xml
roboligo_states/include/roboligo_states/: StatesNode.hpp
roboligo_states/src/roboligo_states/: StatesNode.cpp
roboligo_system/: CMakeLists.txt  package.xml
roboligo_system/include/roboligo_system/: RoboligoNode.hpp
roboligo_system/src/: roboligo_main.cpp
roboligo_system/src/roboligo_system/: RoboligoNode.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  (+57 more)
