<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboligo_cli</name>
  <version>0.0.0</version>
  <description>roboligo cli: roboligo cli tools to manage robots.</description>

  <maintainer email="juanscelyg@gmail.com">Juan S. Cely G.</maintainer>

  <license>Apache License 2.0</license>

  <author>Juan S. Cely G.</author>
  
  <depend>ros2cli</depend>
  <depend>roboligo_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
